--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,18 @@
   "dependencies": {
     "jquery": "~2.1.0",
     "bootstrap": "~3.2.0",
-    "paper-tabs": "Polymer/paper-tabs#~0.4.0"
+    "paper-tabs": "polymerelements/paper-tabs#~1.0.4",
+    "iron-pages": "polymerelements/iron-pages#~1.0.3"
   },
   "devDependencies": {
     "prefixfree": "91790e8aff6d807cd62018479db2307e1972b92a"
+  },
+  "resolutions": {
+    "polymer": "^1.1.0",
+    "core-component-page": "^0.5",
+    "webcomponentsjs": "0.7.15",
+    "font-roboto": "^1.0.1",
+    "paper-icon-button": "^1.0.0",
+    "paper-ripple": "^1.0.0"
   }
 }
